# instructor

./: CHANGELOG.md  CLAUDE.md  REFACTOR.md  build_mkdocs.sh  cache_implementation_summary.md  cache_integration_investigation.md  foo.py  genai_migration_guide.md  mkdocs.yml  output.txt  provider_claude.py  pyproject.toml  refactor_proposal.md  requirements-examples.txt  requirements.txt  test_provider_migration.py  todo.md
examples/: claude_code_provider_demo.py  genai_multimodal_example.py  test_handler_impl.py  xai_example.py
examples/promptframe/: .gitignore  BUILD_SUMMARY.md  DESIGN_DOC.md  Makefile  QUICKSTART.md  README.md  README_SIMPLE.md  SIMPLIFIED.md  demo_default_template.py  example.py  pyproject.toml  requirements.txt  simple_demo.py  simple_example.py
examples/promptframe/src/promptframe/: __init__.py  core.py  demo_quickstart.py  engine.py  promptframe.py  types.py  utils.py
examples/promptframe/tests/: __init__.py  test_promptframe.py
instructor/: __init__.py  auto_client.py  client.py  client_anthropic.py  client_bedrock.py  client_cerebras.py  client_claude_code.py  client_cohere.py  client_fireworks.py  client_gemini.py  client_genai.py  client_groq.py  client_mistral.py  client_openrouter.py  client_perplexity.py  client_vertexai.py  client_writer.py  client_xai.py  function_calls.py  mode.py  multimodal.py  openai_utils.py  patch.py  process_response.py  provider_adapter.py  retry.py  utils.py
providers/: __init__.py  base.py  client_openai.py
tests/: test_auto_client_cache_integration.py  test_cache_backends.py  test_cached_client.py  (+9 more)
(+112 files in other folders)
